; ModuleID = '/home/carl/AnghaBench/git/extr_json-writer.c_array_common.c'
source_filename = "/home/carl/AnghaBench/git/extr_json-writer.c_array_common.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.json_writer = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.json_writer*)* @array_common to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @array_common(%struct.json_writer* %0) #0 {
  %2 = alloca %struct.json_writer*, align 8
  store %struct.json_writer* %0, %struct.json_writer** %2, align 8
  %3 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %4 = call i32 @assert_in_array(%struct.json_writer* %3)
  %5 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %6 = call i32 @maybe_add_comma(%struct.json_writer* %5)
  %7 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %8 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %13 = getelementptr inbounds %struct.json_writer, %struct.json_writer* %12, i32 0, i32 0
  %14 = call i32 @strbuf_addch(i32* %13, i8 signext 10)
  %15 = load %struct.json_writer*, %struct.json_writer** %2, align 8
  %16 = call i32 @indent_pretty(%struct.json_writer* %15)
  br label %17

17:                                               ; preds = %11, %1
  ret void
}

declare dso_local i32 @assert_in_array(%struct.json_writer*) #1

declare dso_local i32 @maybe_add_comma(%struct.json_writer*) #1

declare dso_local i32 @strbuf_addch(i32*, i8 signext) #1

declare dso_local i32 @indent_pretty(%struct.json_writer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
